--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
         <label for="banner">Choose a banner:</label>
         <select id="banner" name="banner">
-         <option value ="choose a banner"></option>
+         <option value="">Select Banner</option>
           <option value="shadow.txt">shadow</option>
           <option value="standard.txt">standard</option>
           <option value="thinkertoy.txt">thinkertoy</option>
