--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,14 @@
         <textarea name="asciiInput" id="asciiInput" cols="30" rows="5" placeholder="Insert Text Here"></textarea>
         <br><br>
 
-        <label for="banner">Choose a banner:</label>
+        <label for="banner">Choose Banner:</label>
         <select id="banner" name="banner">
          <option value="">Select Banner</option>
-          <option value="shadow.txt">shadow</option>
-          <option value="standard.txt">standard</option>
-          <option value="thinkertoy.txt">thinkertoy</option>
+          <option value="shadow.txt">Shadow</option>
+          <option value="standard.txt">Standard</option>
+          <option value="thinkertoy.txt">Thinkertoy</option>
         </select>
-        <input type="submit" autocomplete="off">
+        <input type="submit" value="Submit" autocomplete="off">
       </form>
       <div><pre>{{.}}</pre></div>
 </body>
